Remove Jakarta references
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@614668 13f79535-47bb-0310-9956-ffa450edef68

--- a/PROPOSAL.html
+++ b/PROPOSAL.html
@@ -66,13 +66,13 @@ build a clean monitoring toolkit.</p>
 <code>org.apache.commons.monitoring</code>.</p>
 
 
-<h3>(3)  Required Jakarta-Commons Resources</h3>
+<h3>(3)  Required Apache Commons Resources</h3>
 
 <ul>
 <li>SVN Repository - New directory <code>monitoring</code> in the
-    <code>jakarta-commons</code> SVN repository.</li>
+    <code>commons</code> SVN repository.</li>
 <li>Mailing List - Discussions will take place on the general
-    <em>commons-dev@jakarta.apache.org</em> mailing list.  To help
+    <em>dev@commons.apache.org</em> mailing list.  To help
     list subscribers identify messages of interest, it is suggested that
     the message subject of messages about this component be prefixed with
     [monitoring].</li>
