--- a/PROPOSAL.html
+++ b/PROPOSAL.html
@@ -76,7 +76,7 @@ build a clean monitoring toolkit.</p>
     list subscribers identify messages of interest, it is suggested that
     the message subject of messages about this component be prefixed with
     [monitoring].</li>
-<li>Bugzilla - New component "monitoring" under the "Commons" product
+<li>JIRA Issue Tracking - New component "monitoring" under the "Commons" product
     category, with appropriate version identifiers as needed.</li>
 </ul>
 
