Fix MoSKito link
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@614837 13f79535-47bb-0310-9956-ffa450edef68

--- a/PROPOSAL.html
+++ b/PROPOSAL.html
@@ -25,10 +25,10 @@ be used during developpement.
 <p>
 Some opensource project allready try to fill the gap by providing simple monitoring tools :
 <ul>
-<li><a href="http://www.jamonapi.com">JamonAPI</a> is a well known monitoring toolkit, but lacks for a modular design
+<li><a href="http://www.jamonapi.com">JAMon</a> is a well known monitoring toolkit, but lacks for a modular design
 and a clean tooling (separation between code and tests..). It is driven by a single individual, and as a 
 result doesn't take advantage of an apache-like community driven emulation.</li>
-<li><a href="http://http://moskito.anotheria.net">Moskito</a> is nicely designed, but requires some technical
+<li><a href="http://moskito.anotheria.net/">MoSKito</a> is nicely designed, but requires some technical
 inheritence and for this reason is too much intrusive. Its user community is still tiny accoring to sourceforge statistics</li>
 </ul>
 </p>
