render sum of squares to support post-processing of stats and datas from multiple instances (cluster) aggregation
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@663074 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/org/apache/commons/monitoring/reporting/RendererTest.html
+++ b/src/test/resources/org/apache/commons/monitoring/reporting/RendererTest.html
@@ -4,10 +4,10 @@
 <thead>
 <tr><th rowspan='2'>name</th><th rowspan='2'>category</th><th rowspan='2'>subsystem</th>
 <td colspan='5'>concurrency</td>
-<td colspan='7'>performances (ns)</td>
+<td colspan='8'>performances (ns)</td>
 </tr>
 <tr><th>min</th><th>max</th><th>mean</th><th>deviation</th><th>value</th>
-<th>hits</th><th>sum</th><th>min</th><th>max</th><th>mean</th><th>deviation</th><th>value</th>
+<th>hits</th><th>sum</th><th>squares</th><th>min</th><th>max</th><th>mean</th><th>deviation</th><th>value</th>
 </tr>
 </thead>
 
@@ -16,13 +16,13 @@
 <tr>
 <td>JsonRendererTest.setUp</td><td>test</td><td>reporting</td>
 <td>0</td><td>0</td><td>-</td><td>-</td><td>0</td>
-<td>1</td><td>10</td><td>10</td><td>10</td><td>10.00</td><td>-</td><td>10</td>
+<td>1</td><td>10</td><td>100</td><td>10</td><td>10</td><td>10.00</td><td>-</td><td>10</td>
 </tr>
 
 <tr>
 <td>TestCase</td><td>test</td><td>junit</td>
 <td>1</td><td>1</td><td>0.00</td><td>-</td><td>1</td>
-<td>0</td><td>0</td><td>0</td><td>0</td><td>-</td><td>-</td><td>0</td>
+<td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>-</td><td>-</td><td>0</td>
 </tr>
 
 </tbody>
