getting rid of monitor (counter should be enough)
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1509169 13f79535-47bb-0310-9956-ffa450edef68

--- a/PROPOSAL.html
+++ b/PROPOSAL.html
@@ -28,7 +28,7 @@
 
 <p>Entreprise Java application are expected to be scalable, performant, flexible, maintainable and highly available.
     To ensure this, we need to instrument the application with tooling, both during development to detect design
-    bottlenecks and on production to monitor application behaviour and health.
+    bottlenecks and on production to counter application behaviour and health.
 </p>
 
 <p>
