introduce sb admin part
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616192 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Apache Sirona</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.3.2.0.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/sb-admin.css" rel="stylesheet">
+
+    <!-- Morris Charts CSS -->
+    <link href="css/plugins/morris.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
   </head>
 
   <body>
-  here you go
+
+  <div id="wrapper">
+
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="http://sirona.incubator.apache.org/">Sirona</a>
+      </div>
+
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav side-nav" id="plugins">
+          <li class="active">
+          <li>
+            <a href="$mapping/">Home</a>
+          </li>
+          <li class="active">
+          <li>
+            <a href="$mapping$plugin.url">$plugin.name</a>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right navbar-user">
+          <li><a href="http://www.apache.org/">Apache Software Foundation</a></li>
+        </ul>
+      </div>
+    </nav>
+
+
+    <div id="page-wrapper">
+      Foo
+    </div>
+
+  </div>
+
   </body>
 </html>
