--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -54,6 +54,7 @@
         </div>
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <!-- FIXME this need to be generated/dynamic -->
           <ul class="nav navbar-nav side-nav" id="plugins">
             <li class="active">
             <li>
@@ -61,7 +62,7 @@
             </li>
             <li class="active">
             <li>
-              <a href="$mapping$plugin.url">$plugin.name</a>
+              <a href="#jvm">jvm</a>
             </li>
           </ul>
 
