--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -73,7 +73,7 @@
       </nav>
 
 
-      <div id="page-wrapper" ng-view>
+      <div id="page-wrapper" class="container-fluid" ng-view>
         Foo
       </div>
 
