move jvm controllers to a separate js file
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616747 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -58,7 +58,7 @@
           <ul class="nav navbar-nav side-nav" id="plugins">
             <li class="active">
             <li>
-              <a href="$mapping/">Home</a>
+              <a href="#home">Home</a>
             </li>
             <li class="active">
             <li>
