--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -36,6 +36,7 @@
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+
   </head>
 
   <body>
@@ -62,7 +63,7 @@
             </li>
             <li class="active">
             <li>
-              <a href="#jvm">jvm</a>
+              <a href="#jvm">JVM</a>
             </li>
           </ul>
 
