add missing license headers
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1619010 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -59,13 +59,15 @@
           <!-- FIXME this need to be generated/dynamic -->
           <ul class="nav navbar-nav side-nav" id="plugins">
             <li class="active">
-            <li>
               <a href="#home">Home</a>
             </li>
-            <li class="active">
             <li>
               <a href="#jvm">JVM</a>
             </li>
+            <li>
+              <a href="#threads">Threads</a>
+            </li>
+
           </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-user">
