start structure for counters report
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1619685 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -38,6 +38,8 @@
 
     <link href="css/datetimepicker.0.2.4.css" rel="stylesheet" type="text/css">
 
+    <link href="css/ng-grid.2.0.12.css" rel="stylesheet" type="text/css">
+
   </head>
 
   <body>
@@ -67,7 +69,9 @@
             <li>
               <a href="#threads">Threads</a>
             </li>
-
+            <li>
+              <a href="#report">Report</a>
+            </li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-user">
