start structure for gauges
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1620519 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -66,7 +66,9 @@
             <li>
               <a href="#report">Report</a>
             </li>
-
+            <li>
+              <a href="#gauges">Gauges</a>
+            </li>
             <li>
               <a href="#jvm">JVM</a>
             </li>
