this js file is a minified version so fix the name
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1621006 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -92,7 +92,7 @@
 
   </body>
 
-  <script type="text/javascript" src="js/jquery-1.11.0.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" data-main="js/main.js" src="js/require-2.1.14.js"></script>
 
 </html>
