--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -70,6 +70,9 @@
               <a href="#gauges">Gauges</a>
             </li>
             <li>
+              <a href="#status">Status</a>
+            </li>
+            <li>
               <a href="#jvm">JVM</a>
             </li>
             <li>
