starting jmx tree
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1622652 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -40,6 +40,8 @@
 
     <link href="css/ng-grid.2.0.12.css" rel="stylesheet" type="text/css">
 
+    <link href="css/abn_tree.css" rel="stylesheet" type="text/css">
+
   </head>
 
   <body>
@@ -71,6 +73,9 @@
             </li>
             <li>
               <a href="#status">Status</a>
+            </li>
+            <li>
+              <a href="#jmx">JMX</a>
             </li>
             <li>
               <a href="#jvm">JVM</a>
