--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -75,6 +75,9 @@
               <a href="#jvm">JVM</a>
             </li>
             <li>
+              <a href="#jta">JTA</a>
+            </li>
+            <li>
               <a href="#threads">Threads</a>
             </li>
           </ul>
