--- a/server/reporting/reporting-ui/src/main/webapp/index.html
+++ b/server/reporting/reporting-ui/src/main/webapp/index.html
@@ -78,6 +78,9 @@
               <a href="#jta">JTA</a>
             </li>
             <li>
+              <a href="#sessions">Sessions</a>
+            </li>
+            <li>
               <a href="#threads">Threads</a>
             </li>
           </ul>
